# real-time-ml-system-cohort-4

./: Makefile  pyproject.toml
crypto-predictor-systems/: main.py
deployments/dev/candles/: candles.yaml
deployments/dev/kind/: create_cluster.sh  install_kafka_ui.sh
deployments/dev/technical_indicators/: technical_indicators.yaml
deployments/dev/trades/: trades.yaml
deployments/prod/candles/: candles.yaml
deployments/prod/trades/: trades.yaml
docker/: news-sentiment.Dockerfile  technical_indicators.Dockerfile
lessons/: session_1.md  session_15.md  session_16.md  session_17.md  session_2.md  session_3.md  session_5.md
services/candles/: pyproject.toml  settings.env
services/candles/src/candles/: config.py  main.py
services/news/: pyproject.toml  settings.env
services/news/src/news/: config.py  main.py  news_downloader.py
services/news_sentiment/: .envrc  Makefile  pyproject.toml
services/news_sentiment/src/news_sentiment/: __init__.py  main.py  metrics.py  sentiment_extractor.py
services/news_sentiment/src/news_sentiment/baml_src/: sentiment_scores.baml
services/technical_indicators/: pyproject.toml
services/technical_indicators/src/technical_indicators/: indicators.py  main.py
services/trades/: pyproject.toml
services/trades/src/trades/: config.py  kraken_api.py  main.py
