[project]
name = "news"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Calvin Chen", email = "calvinchen0123@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.2",
]

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"
